--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -11,6 +11,7 @@
   /* box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.5); */
   box-shadow: inset 0px -1px 0px #D1D2D6;
   z-index: 2;
+  position: relative;
 }
 
 .header_about {
