--- a/src/blocks/results/__image/results__image.css
+++ b/src/blocks/results/__image/results__image.css
@@ -4,3 +4,9 @@
   max-height: 272px;
   width: 100%;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results__image {
+    width: 100%;
+  }
+}
