--- a/src/blocks/technologies/__card/technologies__card.css
+++ b/src/blocks/technologies/__card/technologies__card.css
@@ -2,3 +2,9 @@
   margin-top: 93px;
   margin-left: 40px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .technologies__card {
+    margin: 0;
+  }
+}
