--- a/src/blocks/author/__description/author__description.css
+++ b/src/blocks/author/__description/author__description.css
@@ -2,3 +2,9 @@
   max-width: 600px;
   margin-left: 65px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .author__description {
+    margin-left: 32px;
+  }
+}
