--- a/src/blocks/author/__sub-title/author__sub-title.css
+++ b/src/blocks/author/__sub-title/author__sub-title.css
@@ -7,3 +7,9 @@
   font-family: Roboto;
   color: #1A1B22;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .author__sub-title {
+    margin: 0;
+  }
+}
