--- a/src/blocks/author/__title/author__title.css
+++ b/src/blocks/author/__title/author__title.css
@@ -7,9 +7,10 @@
   color: #1A1B22;
   }
 
-  @media screen and (min-width: 321px) and (max-width: 768px) {
-    .author__title {
-      font-size: 30px;
-      line-height: 40px;
-    }
-  }
+ @media (min-width: 768px) and (max-width: 1439px) {
+   .author__title {
+     font-size: 30px;
+     line-height: 40px;
+     margin: 40px 0 20px 0;
+   }
+ }
