--- a/src/blocks/clients/__info/clients__info.css
+++ b/src/blocks/clients/__info/clients__info.css
@@ -2,3 +2,10 @@
   max-width: 815px;
   margin: 80px 0 94px 104px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .clients__info {
+    max-width: 688px;
+    margin: 16px auto 0;
+  }
+}
