--- a/src/blocks/commits/__info/commits__info.css
+++ b/src/blocks/commits/__info/commits__info.css
@@ -4,3 +4,10 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .commits__info {
+    padding-top: 40px;
+    margin: 0 40px;
+  }
+}
