--- a/src/blocks/commits/__title/commits__title.css
+++ b/src/blocks/commits/__title/commits__title.css
@@ -7,3 +7,11 @@
   color: #1A1B22;
   margin: 0;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .commits__title {
+    font-size: 30px;
+    line-height: 34px;
+    width: 297px;
+  }
+}
