--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -8,8 +8,8 @@
   color: #B6BCBF;
 }
 
-@media screen and (min-width: 321px) and (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1439px) {
   .footer__copyright {
-    margin-left: 0px;
+    margin: 24px 0 18px 40px;
   }
 }
