--- a/src/blocks/footer/__icon/footer__icon.css
+++ b/src/blocks/footer/__icon/footer__icon.css
@@ -3,8 +3,8 @@
   margin-right: 105px;
 }
 
-@media screen and (min-width: 321px) and (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1439px) {
   .footer__icon {
-    margin-right: 0;
+    margin-right: 42px;
   }
 }
