--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -37,3 +37,13 @@
 .header__link_no-active-analitics:hover {
   color: #1A1B22;
 }
+
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .header__link_active-dark {
+    padding-bottom: 17px;
+  }
+  .header__link_active-white {
+    padding-bottom: 17px;
+  }
+}
