--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -8,8 +8,7 @@
   justify-content: space-between;
   min-height: 80px;
   background: rgba(196, 196, 196, 0.01);
-  /* box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.5); */
-  box-shadow: inset 0px -1px 0px #D1D2D6;
+  box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
   z-index: 2;
   position: relative;
 }
