--- a/src/blocks/results/__card/results__card.css
+++ b/src/blocks/results/__card/results__card.css
@@ -4,3 +4,9 @@
   border-radius: 16px;
   background-color: #FFFFFF;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results__card {
+    overflow: hidden;
+  }
+}
