--- a/src/blocks/results/__cards/results__cards.css
+++ b/src/blocks/results/__cards/results__cards.css
@@ -6,3 +6,11 @@
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 11px;
 }
+
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results__cards {
+    margin: 32px 40px 0;
+    grid-gap: 6px;
+  }
+}
