--- a/src/blocks/results/__info/results__info.css
+++ b/src/blocks/results/__info/results__info.css
@@ -3,3 +3,9 @@
   justify-content: space-between;
   margin:0 104px 0;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results__info {
+    margin: 40px 47px 0 40px;
+  }
+}
