--- a/src/blocks/results/__sub-title/results__sub-title.css
+++ b/src/blocks/results/__sub-title/results__sub-title.css
@@ -8,3 +8,10 @@
   margin-top: 10px;
   margin-bottom: 0;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results__sub-title {
+    font-size: 22px;
+    line-height: 24px;
+  }
+}
