--- a/src/blocks/results/__title/results__title.css
+++ b/src/blocks/results/__title/results__title.css
@@ -6,3 +6,10 @@
   line-height: 46px;
   color: #1A1B22;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results__title {
+    font-size: 30px;
+    line-height: 34px;
+  }
+}
