--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -13,7 +13,12 @@
 @import url(./__else/results__else.css);
 
 .results {
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding: 80px 0;
   background-color: #F5F6F7;
+}
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .results {
+    padding: 40px 0 20px 0;
+  }
 }
