--- a/src/blocks/technologies/__title/technologies__title.css
+++ b/src/blocks/technologies/__title/technologies__title.css
@@ -8,3 +8,11 @@
   margin: 80px 0 0 104px;
   max-width: 344px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .technologies__title {
+    font-size: 30px;
+    line-height: 34px;
+    margin: 40px 0 0 40px;
+  }
+}
