--- a/src/blocks/technologies/technologies.css
+++ b/src/blocks/technologies/technologies.css
@@ -7,3 +7,9 @@
   background-color:  #F5F6F7;
   min-height: 334px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .technologies {
+    flex-direction: column;
+  }
+}
