Обновил файлы после первой итерации второго этапа

--- a/src/blocks/analytics/__nav/analytics__nav.css
+++ b/src/blocks/analytics/__nav/analytics__nav.css
@@ -10,3 +10,9 @@
 .analytics__nav_no-active {
   color: #B6BCBF;
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .analytics__nav {
+    display: none;
+  }
+}
