--- a/src/blocks/analytics/analytics.css
+++ b/src/blocks/analytics/analytics.css
@@ -9,3 +9,15 @@
   flex-direction: column;
   margin: 40px 0 80px 104px;
 }
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .analytics {
+    margin: 32px 0 0 40px ;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .analytics {
+    margin: 36px 0 0 24px;
+  }
+}
