--- a/src/blocks/author/__sub-title/author__sub-title.css
+++ b/src/blocks/author/__sub-title/author__sub-title.css
@@ -13,3 +13,9 @@
     margin: 0;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .author__sub-title {
+    margin-top: 16px;
+  }
+}
