--- a/src/blocks/clients/__title/clients__title.css
+++ b/src/blocks/clients/__title/clients__title.css
@@ -13,3 +13,9 @@
     line-height: 34px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .clients__title {
+    line-height: 40px;
+  }
+}
