--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -13,3 +13,10 @@
     margin: 24px 0 18px 40px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .footer__copyright {
+    margin: 40px 0 22px 16px;
+    order: 3;
+  }
+}
