--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -12,3 +12,13 @@
   min-height: 80px;
   align-items: center;
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    max-height: 224px;
+    margin-right: 18px;
+  }
+}
