--- a/src/blocks/header/__links/header__links.css
+++ b/src/blocks/header/__links/header__links.css
@@ -8,3 +8,9 @@
     margin: 22px 42px 0 0;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .header__links {
+    margin: 28px 16px 0 0;
+  }
+}
