--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -17,3 +17,11 @@
     margin: 22px 0 0 40px;
   }
 }
+
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .header__title {
+    font-size: 16px;
+    margin: 28px 0 0 16px;
+  }
+}
