--- a/src/blocks/results/__info/results__info.css
+++ b/src/blocks/results/__info/results__info.css
@@ -9,3 +9,10 @@
     margin: 40px 47px 0 40px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .results__info {
+    margin: 32px 16px 0;
+    flex-direction: column;
+  }
+}
