--- a/src/blocks/results/__title/results__title.css
+++ b/src/blocks/results/__title/results__title.css
@@ -13,3 +13,11 @@
     line-height: 34px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .results__title {
+    font-size: 30px;
+    line-height: 34px;
+    margin: 0;
+  }
+}
