--- a/src/blocks/search/__block/search__block.css
+++ b/src/blocks/search/__block/search__block.css
@@ -11,3 +11,10 @@
     margin: 104px auto;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .search__block {
+    max-width: 285px;
+    margin: 86px auto;
+  }
+}
