--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -17,3 +17,10 @@
     width: 292px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .search__input {
+    width: 245px;
+    margin-top: 16px;
+  }
+}
