--- a/src/blocks/technologies/__logo/technologies__logo.css
+++ b/src/blocks/technologies/__logo/technologies__logo.css
@@ -9,3 +9,12 @@
     justify-content: space-between;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .technologies__logo {
+    flex-wrap: wrap;
+    margin: 39px 25px 0;
+    justify-content: space-between;
+    padding-bottom: 25px;
+  }
+}
