--- a/src/blocks/author/__image/author__image.css
+++ b/src/blocks/author/__image/author__image.css
@@ -5,17 +5,18 @@
 }
 
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1439px) {
   .author__image {
     max-width: 372px;
     max-height: 372px;
   }
 }
 
-@media screen and (min-width: 321px) and (max-width: 768px) {
+
+@media (min-width: 320px) and (max-width: 767px) {
   .author__image {
-    max-width: 232px;
-    max-height: 232px;
-    margin-top: 50px;
+    max-width: 272px;
+    max-height: 272px;
+    margin: 32px auto 0;
   }
 }
