--- a/src/blocks/clients/__info/clients__info.css
+++ b/src/blocks/clients/__info/clients__info.css
@@ -9,3 +9,10 @@
     margin: 16px auto 0;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .clients__info {
+    max-width: 288px;
+    margin: 16px auto 0;
+  }
+}
