--- a/src/blocks/footer/__text/footer__text.css
+++ b/src/blocks/footer/__text/footer__text.css
@@ -15,3 +15,10 @@
     margin-left: 24px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .footer__text {
+    margin: 0;
+    line-height: 48px;
+  }
+}
