--- a/src/blocks/infographics/__title/infographics__title.css
+++ b/src/blocks/infographics/__title/infographics__title.css
@@ -7,3 +7,19 @@
   color: #1A1B22;
   margin: 80px 0 0 104px;
 }
+
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .infographics__title {
+    margin-left: 40px;
+    padding-top: 40px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .infographics__title {
+    font-size: 22px;
+    margin-left: 16px;
+    padding-top: 24px;
+  }
+}
