--- a/src/blocks/results/__link/results__link.css
+++ b/src/blocks/results/__link/results__link.css
@@ -10,3 +10,11 @@
   color: #1A1B22;
   text-decoration: none;
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .results__link {
+    font-size: 18px;
+    line-height:  24px;
+    margin-top: 16px;
+  }
+}
