--- a/src/blocks/search/__sub-title/search__sub-title.css
+++ b/src/blocks/search/__sub-title/search__sub-title.css
@@ -13,3 +13,10 @@
     margin: 16px 0 0;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .search__sub-title {
+    font-size: 20px;
+    line-height:  26px;
+  }
+}
