--- a/src/blocks/search/__title/search__title.css
+++ b/src/blocks/search/__title/search__title.css
@@ -16,3 +16,12 @@
     margin: 0;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .search__title {
+    font-size: 36px;
+    line-height: 40px;
+    max-width: 204px;
+    margin: 0;
+  }
+}
