--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -1,9 +1,9 @@
 @import url(./__block/search__block.css);
 @import url(./__sub-title/search__sub-title.css);
 @import url(./__title/search__title.css);
-@import url(./__inputs/__input/search__inputs.css);
-@import url(./__inputs/__input/__input/search__input.css);
-@import url(./__inputs/__input/__submit/search__submit.css);
+@import url(./__input/search__input.css);
+@import url(./__inputs/search__inputs.css);
+@import url(./__submit/search__submit.css);
 
 .search {
   height: 576px;
@@ -22,5 +22,11 @@
   .search {
     background-image: url(../../images/georgia-de-lotz--UsJoNxLaNo-unsplash-768px.png);
     height: 400px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+  .search {
+    background-image: url(../../images/georgia-de-lotz--UsJoNxLaNo-unsplash-320px.png);
   }
 }
