--- a/src/blocks/technologies/__title/technologies__title.css
+++ b/src/blocks/technologies/__title/technologies__title.css
@@ -16,3 +16,12 @@
     margin: 40px 0 0 40px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .technologies__title {
+    font-size: 30px;
+    line-height: 40px;
+    margin: 32px 0 0 16px;
+
+  }
+}
