--- a/src/blocks/technologies/technologies.css
+++ b/src/blocks/technologies/technologies.css
@@ -13,3 +13,8 @@
     flex-direction: column;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .technologies { flex-direction: column;
+  }
+}
