Исправил блок commits

--- a/src/blocks/commits/__button/commits__button.css
+++ b/src/blocks/commits/__button/commits__button.css
@@ -1,4 +1,4 @@
-.commits__link {
+.commits__button {
   font-family: 'Roboto', Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -6,13 +6,21 @@
   line-height: 24px;
   display: flex;
   align-items: center;
-  text-align: right;
+  text-align: center;
   color: #1A1B22;
   text-decoration: none;
+  width: 288px;
+  margin: 48px auto;
+  border-radius: 100px;
+  height: 48px;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
-  .commits__link {
+@media (min-width: 768px) {
+  .commits__button {
     display: none;
   }
+}
+
+.commits__button_link {
+  width: 150px;
 }
