--- a/src/blocks/commits/__image/commits__image.css
+++ b/src/blocks/commits/__image/commits__image.css
@@ -2,3 +2,10 @@
   width: 64px;
   height: 64px;
 }
+
+@media (max-width: 320px) and (max-width: 767px) {
+  .commits__image {
+    width: 48px;
+    height: 48px;
+  }
+}
