--- a/src/blocks/commits/__info/commits__info.css
+++ b/src/blocks/commits/__info/commits__info.css
@@ -11,3 +11,10 @@
     margin: 0 40px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .commits__info {
+    margin: 32px 0 0 16px;
+    padding-top: 0;
+  }
+}
