--- a/src/blocks/commits/__card/commits__card.css
+++ b/src/blocks/commits/__card/commits__card.css
@@ -4,3 +4,16 @@
   width: 32%;
   min-height: 288px;
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .commits__card:nth-of-type(2) {
+    display: none;
+  }
+  .commits__card:nth-of-type(3) {
+    display: none;
+  }
+  .commits__card {
+    width: 100%;
+
+  }
+}
