--- a/src/blocks/commits/__name/commits__name.css
+++ b/src/blocks/commits/__name/commits__name.css
@@ -7,3 +7,9 @@
   color: #1A1B22;
   margin: 0;
 }
+
+@media (min-width: 320px) and (max-width: 1439px) {
+  .commits__name {
+    font-size: 20px;
+  }
+}
