--- a/src/blocks/commits/__title/commits__title.css
+++ b/src/blocks/commits/__title/commits__title.css
@@ -15,3 +15,10 @@
     width: 297px;
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .commits__title {
+    line-height: 40px;
+    width: 200px;
+  }
+}
