--- a/src/blocks/commits/commits.css
+++ b/src/blocks/commits/commits.css
@@ -11,8 +11,11 @@
 @import url(./__name/commits__name.css);
 @import url(./__personal/commits__personal.css);
 @import url(./__text/commits__text.css);
+@import url(./__button/commits__button.css);
 
 .commits {
   min-height: 550px;
   background-color: #F5F6F7;
+  display: flex;
+  flex-direction: column;
 }
