--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -15,6 +15,7 @@
 .results {
   padding: 80px 0;
   background-color: #F5F6F7;
+  display: none;
 }
 
 @media (min-width: 768px) and (max-width: 1439px) {
@@ -27,4 +28,8 @@
   .results {
     padding: 20px 0 44px 0;
   }
+}
+
+.results_visible {
+  display: block;
 }
