--- a/src/blocks/search/__form/search__inputs.css
+++ b/src/blocks/search/__form/search__inputs.css
@@ -1,4 +1,4 @@
-.search__inputs {
+.search__form {
   margin-top: 64px;
   display: flex;
   width: 608px;
@@ -13,7 +13,7 @@
 }
 
 @media (min-width: 768px) and (max-width: 1439px) {
-  .search__inputs {
+  .search__form {
     width: 448px;
     height: 56px;
     margin-top: 24px;
@@ -21,7 +21,7 @@
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
-  .search__inputs {
+  .search__form {
     width: 288px;
     height: 56px;
     margin-top: 64px;
