--- a/src/blocks/no-results/no-results.css
+++ b/src/blocks/no-results/no-results.css
@@ -5,6 +5,12 @@
 .no-results {
   background-color:#F5F6F7;
   min-height: 374px;
-  display: flex;
+  display: none;
   flex-direction: column;
 }
+
+.no-results_visible {
+  display: flex;
+}
+
+
