--- a/src/pages/index-page.css
+++ b/src/pages/index-page.css
@@ -7,5 +7,5 @@
 @import url(../blocks/loader/loader.css);
 @import url(../blocks/no-results/no-results.css);
 @import url(../blocks/results/results.css);
-
+@import url(../blocks/error/error.css);
 
