Часть функционала реализована

--- a/src/blocks/results/__else/results__else.css
+++ b/src/blocks/results/__else/results__else.css
@@ -19,6 +19,7 @@
   border: none;
   outline: none;
   cursor: pointer;
+  display: none;
 }
 
 @media (min-width: 768px) and (max-width: 1439px) {
@@ -35,4 +36,8 @@
 
 .results__else:hover {
   opacity: .9;
+}
+
+.results__else_visible {
+  display: flex;
 }
