--- a/src/blocks/results/__article/results__article.css
+++ b/src/blocks/results/__article/results__article.css
@@ -1,14 +1,15 @@
 .results__article {
   display: flex;
+  min-height: 280px;
   flex-direction: column;
   justify-content: space-between;
-  margin: 20px 24px 24px;
+  margin: 20px 24px 20px;
 }
 
 @media (min-width: 768px) and (max-width: 1439px) {
   .results__article {
     margin: 16px;
-    overflow: hidden;
     text-overflow: ellipsis;
+    max-height: 388px;
   }
 }
