--- a/src/blocks/results/__card/results__card.css
+++ b/src/blocks/results/__card/results__card.css
@@ -1,5 +1,6 @@
 .results__card {
   width: 100%;
+  max-width: 400px;
   max-height: 576px;
   border-radius: 16px;
   background-color: #FFFFFF;
@@ -7,6 +8,8 @@
 
 @media (min-width: 768px) and (max-width: 1439px) {
   .results__card {
+    max-height: 420px;
+    max-width: 100%;
     overflow: hidden;
   }
 }
