--- a/src/blocks/results/__cards/results__cards.css
+++ b/src/blocks/results/__cards/results__cards.css
@@ -1,15 +1,16 @@
 .results__cards {
+  max-width: 1232px;
   display: grid;
   justify-content: space-between;
-  margin: 64px 104px 0;
+  margin: 64px auto 0;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
   grid-gap: 11px;
 }
 
 
 @media (min-width: 768px) and (max-width: 1439px) {
   .results__cards {
+    max-width: 100%;
     margin: 32px 40px 0;
     grid-gap: 6px;
   }
