--- a/src/blocks/results/__text/results__text.css
+++ b/src/blocks/results/__text/results__text.css
@@ -12,6 +12,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   visibility: visible;
+  height: 110px;
 }
 
 @media (min-width: 768px) and (max-width: 1439px) {
