--- a/src/blocks/results/__text/results__text.css
+++ b/src/blocks/results/__text/results__text.css
@@ -17,6 +17,11 @@
 
 @media (min-width: 768px) and (max-width: 1439px) {
   .results__text {
-  -webkit-line-clamp: 4;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    visibility: visible;
+    height: 88px;
   }
 }
