Обновление информации об авторе

--- a/src/blocks/commits/__email/commits__email.css
+++ b/src/blocks/commits/__email/commits__email.css
@@ -6,4 +6,8 @@
   line-height: 22px;
   color: #1A1B22;
   margin: 0;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  visibility: visible;
 }
